Fixed a bunch of stuff